# creator_administrator

./: .gitignore  .pylintrc  LICENSE  README.md  \  ahahaha.dxf  create_batch_apps.py  create_executable.bash  create_executable.bat  laser_app.bat  licence.txt  package-lock.json  package.json  pyproject.toml  readme.md
3d-printers/implementation/: .gitignore  clickable.bash  clickable.spec  pyproject.toml  readme.md
3d-printers/implementation/batch_files/: inbox.bat  select_bestand.bat
3d-printers/implementation/create_exe_file/: create_exe_file.py  testting.spec
3d-printers/implementation/create_folders/: create_folders.py
3d-printers/implementation/email_templates/: RECEIVED_MAIL_TEMPLATE.html  afgekeurd.html  bijlage_gedownload.html  print_klaar.html  print_klaar_bak.html  readme.md  received.html  standard_response.html
3d-printers/implementation/functions/: afgekeurd.py  afgekeurd.spec  check_health.py  cmd_farewell_handler.py  cmd_farewell_main.py  conversion_functions.py  convert_functions.py  create_batch_file.py  create_batch_files.py  create_inbox.py  csv_job_tracker.py  directory_functions.py  email_manager.py  executable_functions.py  gesliced.py  global_variables.py  inbox.py  job_name.txt  job_tracker.py  local_cmd_farewell_handler.py  local_convert_functions.py  local_create_batch_file.py  local_directory_functions.py  mail_functions.py  printer_aangezet.py  printer_klaar.py  readme.md  remove_directory.py  select_bestand.py  select_file.py  talk_to_sa.py  test.py
3d-printers/implementation/helper_functions/: directory_functions.py  executable_functions.py  global_variables.py  helper_functions.py  mail_functions.py
3d-printers/implementation/logs/: job_log.csv
3d-printers/implementation/old_yann_implementation/: Inbox.py  Sorter.py  Wachtlijst.py
3d-printers/implementation/popup_mail/: can_i_print.eml
3d-printers/implementation/src/: afgekeurd.py  check_health.py  global_variables.py  inbox.py  local_cmd_farewell_handler.py  local_create_batch_file.py  (+6 more)
(+323 files in other folders)
