[tool.poetry]
name = "creator_administrator"
version = "0.1.0"
description = "Handle job requests to create stuff using 3D printers and laser cutters."
authors = ["Gijs Groote <gijsgroote@hotmail.com>"]
license = "GPL-3.0 licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.6.1"
PyQt6-WebEngine = "^6.6.0"
requests = "^2.31.0"
Unidecode = "^1.3.8"
pypiwin32 = "^223"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
