[tool.poetry]
name = "creator_administrator"
version = "0.1.0"
description = "Handle job requests to create stuff using 3D printers and laser cutters."
authors = ["Gijs Groote <gijsgroote@hotmail.com>"]
license = "GPL-3.0 licence"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
PyQt6 = "^6.6.1"
pytest-qt = "^4.4.0"
requests = "^2.31.0"
Unidecode = "^1.3.8"
# pyinstaller = "^6.3.0"
pywin32 = {version = "^306", platform = "win32"}
pyqtdarktheme = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pylint = "^3.1.0"
pylint-fail-under = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
testpaths = ["creator_administrator/tests"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"
cache_dir = ".pytest_cache"

