[tool.poetry]
name = "3d printer implementation"
version = "0.1.0"
description = ""
authors = ["Gijs Groote <gijsgroote@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rope = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
